test/docs(back): fix sonar findings and add validation evidence